2006-12-08  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoff.

        Testcases for http://bugs.webkit.org/show_bug.cgi?id=11777
        Crash when using XMLSerializer.serializeToString() on
        documentless, DocumentType nodes.

        * fast/dom/XMLSerializer-doctype-expected.txt: Added.
        * fast/dom/XMLSerializer-doctype.html: Added.
        * fast/dom/XMLSerializer-doctype2-expected.txt: Added.
        * fast/dom/XMLSerializer-doctype2.html: Added.

2006-12-08  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by john

        <rdar://problem/4836287>
        Cannot expand selection out of editable element when containing element is non-editable.

        * editing/selection/mixed-editability-6-expected.checksum: Added.
        * editing/selection/mixed-editability-6-expected.png: Added.
        * editing/selection/mixed-editability-6-expected.txt: Added.
        * editing/selection/mixed-editability-6.html: Added.
        * editing/selection/mixed-editability-7-expected.checksum: Added.
        * editing/selection/mixed-editability-7-expected.png: Added.
        * editing/selection/mixed-editability-7-expected.txt: Added.
        * editing/selection/mixed-editability-7.html: Added.

2006-12-08  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Geoff.

        http://bugs.webkit.org/show_bug.cgi?id=6275
        XMLHttpRequest.getResponseHeader should return a null string for non-existent headers

        * http/tests/xmlhttprequest/methods-async-expected.txt:
        * http/tests/xmlhttprequest/methods-expected.txt:
        * http/tests/xmlhttprequest/methods-lower-case-expected.txt:
        Updated the results.

        * http/tests/xmlhttprequest/web-apps/008-expected.txt:
        * http/tests/xmlhttprequest/web-apps/008-test.asis:
        * http/tests/xmlhttprequest/web-apps/008.html:
        Changed to test both missing and empty headers, also test case insensitivity
        of header names.